--- a/core/Makefile
+++ b/core/Makefile
@@ -2250,7 +2250,7 @@ bacon: otapackage
 	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(MK_TARGET_PACKAGE)
 	$(hide) $(MD5SUM) $(MK_TARGET_PACKAGE) | cut -f1 -d' ' > $(MK_TARGET_PACKAGE).md5sum
 	@echo "Package Complete: $(MK_TARGET_PACKAGE)" >&2
-	@echo "Package Size: `ls -lh $(MK_TARGET_PACKAGE) | cut -d ' ' -f 5`"
+	@echo "Package Size: `ls -lh $(MK_TARGET_PACKAGE) | cut -d ' ' -f 5`" >&2
 
 	$(hide) # Create Release, History, Nightly and Experimental folder Start
 ifdef MK_BUILD_PATH
